Switch to text blocks in `GenerateBtmTaskTest` and replace `.get(0)` with `.getFirst()` for improved clarity and consistency in tests.